Utworzono za pomocą Colaboratory

--- a/Darknet-colab.ipynb
+++ b/Darknet-colab.ipynb
@@ -1,218 +1,358 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "d7a8c156-7b2c-4f05-9e47-cbb7812b2f65",
-   "metadata": {},
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/AlicjaA/darknet-colab/blob/master/Darknek-colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 5,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.5"
+    },
+    "colab": {
+      "name": "Darknet-colab.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    }
   },
-  {
-   "cell_type": "markdown",
-   "id": "3357d046-84bb-43bc-97f1-0a0d62e09620",
-   "metadata": {},
-   "source": [
-    "## Updating enviroment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64a86496-b809-41d4-913b-fd757c3a469e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!apt update\n",
-    "!apt upgrade -y\n",
-    "!uname -m && cat /etc/*release\n",
-    "!gcc --version\n",
-    "!uname -r"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "616d76de-877c-49f7-8cf6-794c4137d20c",
-   "metadata": {},
-   "source": [
-    "## Initialising github connection and downloading code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec60264b-fda4-4b6c-80c0-e797a429628b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user = input('User name: ')\n",
-    "password = getpass('Password: ')\n",
-    "password = urllib.parse.quote(password) # your password is converted into url format\n",
-    "repo_name = input('Repo name: ')\n",
-    "mail = input('Mail: ')\n",
-    "cmd_string = 'git clone https://{0}:{1}@github.com/{0}/{2}.git'.format(user, password, repo_name)\n",
-    "os.system(cmd_string)\n",
-    "cmd_string, password = '' # removing the password from the variable\n",
-    "os.chdir('darknet/')\n",
-    "!git config --global user.email '{3}'\n",
-    "!git config --global user.name '{0}'\n",
-    "\n",
-    "!python3 changesWatcher.py ./"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3608dc69-d659-42a3-9c93-a79846de099b",
-   "metadata": {},
-   "source": [
-    "### Initialising Google Drive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87b496aa-2639-4f41-8592-2e2a9107f753",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the Drive helper and mount\n",
-    "from google.colab import drive\n",
-    "\n",
-    "# This will prompt for authorization.\n",
-    "drive.mount('/content/drive/BCCD')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "382cfc79-e1fa-4be5-8dae-4b7600cf50cf",
-   "metadata": {},
-   "source": [
-    "## Installing Darknet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a5fdb92-48e2-4933-bc58-bbdefb66ca8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!apt install libopencv-dev python-opencv ffmpeg"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "039a13c9-80d4-4743-9bba-093e17abeb34",
-   "metadata": {},
-   "source": [
-    "Changing the variables to include OpenCV and GPU in the Makefile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be1d612e-d852-42a1-9696-6c40f05fe3cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!sed -i 's/OPENCV=0/OPENCV=1/g' Makefile\n",
-    "!sed -i 's/GPU=0/GPU=1/g' Makefile\n",
-    "#!sed -i 's/CUDNN=0/CUDNN=1/g' Makefile\n",
-    "%pycat Makefile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2fa2267-6f78-4618-bdf6-3634e4c8eb7f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!make"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4855dff0-481f-4fb0-a6bc-704baa99ba2f",
-   "metadata": {},
-   "source": [
-    "## Training"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4d7df690-857e-499f-bf7b-02331a41fcc9",
-   "metadata": {},
-   "source": [
-    "### Cutting weghts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30e91b47-49d3-43d1-b350-5de8d4c1c5a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!./darknet partial cfg/yolov4-tiny-3l-aa-leaky-real3l-v3.cfg backup/yolov4.weights backup/aayv4-3l-62.weights 62"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8cea4ae3-968d-4198-8cce-169b0388d634",
-   "metadata": {},
-   "source": [
-    "### From the beginning"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b96a2b9b-e418-4a09-b30c-d30bff059e5f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!./darknet detector train -map -dont_show cfg/voc-bccd-aug.data cfg/yolov4-tiny-3l-aa-leaky-real3l-v3.cfg backup/aayv4-3l-62.weights >> ./training_tiny-3l-aa-leaky-real3l-v3-p1-1.log"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bee3d6b4-fb7d-4026-aaac-41b2d4fe9849",
-   "metadata": {},
-   "source": [
-    "### From backup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b9b4b21-edf3-48f2-bd5a-61aff89ce1b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "./darknet detector train -map -dont_show cfg/voc-bccd-aug.data cfg/yolov4-tiny-3l-aa-leaky-real3l-v3-p7.cfg backup/yolov4-tiny-3l-aa-leaky-real3l-v3-p7_last.weights >> ./training_tiny-3l-aa-leaky-real3l-v3-p7.log"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d7a8c156-7b2c-4f05-9e47-cbb7812b2f65"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/AlicjaA/darknet-colab/blob/master/Darknek-colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ],
+      "id": "d7a8c156-7b2c-4f05-9e47-cbb7812b2f65"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3357d046-84bb-43bc-97f1-0a0d62e09620"
+      },
+      "source": [
+        "## Updating enviroment"
+      ],
+      "id": "3357d046-84bb-43bc-97f1-0a0d62e09620"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "64a86496-b809-41d4-913b-fd757c3a469e",
+        "outputId": "36e5562b-dc3a-49cf-dfb1-9c4244e15fb4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!apt update\n",
+        "!apt upgrade -y\n",
+        "!uname -m && cat /etc/*release\n",
+        "!gcc --version\n",
+        "!uname -r\n",
+        "!pip install watchdog"
+      ],
+      "id": "64a86496-b809-41d4-913b-fd757c3a469e",
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hit:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease\n",
+            "Ign:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "Ign:3 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "Hit:4 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
+            "Hit:5 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease\n",
+            "Hit:6 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "Get:7 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
+            "Hit:8 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
+            "Get:10 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
+            "Hit:11 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
+            "Hit:13 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
+            "Get:14 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
+            "Hit:15 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
+            "Get:16 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [2,581 kB]\n",
+            "Get:17 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,183 kB]\n",
+            "Fetched 5,016 kB in 7s (723 kB/s)\n",
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "5 packages can be upgraded. Run 'apt list --upgradable' to see them.\n",
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "Calculating upgrade... Done\n",
+            "The following packages were automatically installed and are no longer required:\n",
+            "  libnvidia-common-460 linux-headers-4.15.0-142\n",
+            "  linux-headers-4.15.0-142-generic\n",
+            "Use 'apt autoremove' to remove them.\n",
+            "The following packages have been kept back:\n",
+            "  libcudnn8 libcudnn8-dev libnccl-dev libnccl2 libnvidia-common-465\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 5 not upgraded.\n",
+            "x86_64\n",
+            "DISTRIB_ID=Ubuntu\n",
+            "DISTRIB_RELEASE=18.04\n",
+            "DISTRIB_CODENAME=bionic\n",
+            "DISTRIB_DESCRIPTION=\"Ubuntu 18.04.5 LTS\"\n",
+            "NAME=\"Ubuntu\"\n",
+            "VERSION=\"18.04.5 LTS (Bionic Beaver)\"\n",
+            "ID=ubuntu\n",
+            "ID_LIKE=debian\n",
+            "PRETTY_NAME=\"Ubuntu 18.04.5 LTS\"\n",
+            "VERSION_ID=\"18.04\"\n",
+            "HOME_URL=\"https://www.ubuntu.com/\"\n",
+            "SUPPORT_URL=\"https://help.ubuntu.com/\"\n",
+            "BUG_REPORT_URL=\"https://bugs.launchpad.net/ubuntu/\"\n",
+            "PRIVACY_POLICY_URL=\"https://www.ubuntu.com/legal/terms-and-policies/privacy-policy\"\n",
+            "VERSION_CODENAME=bionic\n",
+            "UBUNTU_CODENAME=bionic\n",
+            "gcc (Ubuntu 7.5.0-3ubuntu1~18.04) 7.5.0\n",
+            "Copyright (C) 2017 Free Software Foundation, Inc.\n",
+            "This is free software; see the source for copying conditions.  There is NO\n",
+            "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n",
+            "\n",
+            "5.4.109+\n",
+            "Collecting watchdog\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/58/f6/6b538562aaa62294ca0a1d18b59d9fcb1a43fe166fa5b3a258f445d64119/watchdog-2.1.1-py3-none-manylinux2014_x86_64.whl (74kB)\n",
+            "\u001b[K     |████████████████████████████████| 81kB 3.9MB/s \n",
+            "\u001b[?25hInstalling collected packages: watchdog\n",
+            "Successfully installed watchdog-2.1.1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "616d76de-877c-49f7-8cf6-794c4137d20c"
+      },
+      "source": [
+        "## Initialising github connection and downloading code"
+      ],
+      "id": "616d76de-877c-49f7-8cf6-794c4137d20c"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ec60264b-fda4-4b6c-80c0-e797a429628b"
+      },
+      "source": [
+        "import os\n",
+        "from getpass import getpass\n",
+        "import urllib\n",
+        "\n",
+        "user = input('User name: ')\n",
+        "password = getpass('Password: ')\n",
+        "password = urllib.parse.quote(password) # your password is converted into url format\n",
+        "repo_name = input('Repo name: ')\n",
+        "mail = input('Mail: ')\n",
+        "cmd_string = 'git clone https://{0}:{1}@github.com/{0}/{2}.git'.format(user, password, repo_name)\n",
+        "os.system(cmd_string)\n",
+        "cmd_string, password = [0, 0] # removing the password from the variable\n",
+        "os.chdir('darknet-clb/')\n",
+        "!git config --global user.email '{3}'\n",
+        "!git config --global user.name '{0}'"
+      ],
+      "id": "ec60264b-fda4-4b6c-80c0-e797a429628b",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RZ75-jY2ymdk"
+      },
+      "source": [
+        "!python3 ./changesWatcher.py ./"
+      ],
+      "id": "RZ75-jY2ymdk",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3608dc69-d659-42a3-9c93-a79846de099b"
+      },
+      "source": [
+        "### Initialising Google Drive"
+      ],
+      "id": "3608dc69-d659-42a3-9c93-a79846de099b"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "87b496aa-2639-4f41-8592-2e2a9107f753",
+        "outputId": "efd90054-9f8d-4dfc-f209-a88bbcd1a5af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Load the Drive helper and mount\n",
+        "from google.colab import drive\n",
+        "\n",
+        "# This will prompt for authorization.\n",
+        "drive.mount('/BCCD')"
+      ],
+      "id": "87b496aa-2639-4f41-8592-2e2a9107f753",
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /BCCD\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "382cfc79-e1fa-4be5-8dae-4b7600cf50cf"
+      },
+      "source": [
+        "## Installing Darknet"
+      ],
+      "id": "382cfc79-e1fa-4be5-8dae-4b7600cf50cf"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8a5fdb92-48e2-4933-bc58-bbdefb66ca8e"
+      },
+      "source": [
+        "!apt install libopencv-dev python-opencv ffmpeg"
+      ],
+      "id": "8a5fdb92-48e2-4933-bc58-bbdefb66ca8e",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "039a13c9-80d4-4743-9bba-093e17abeb34"
+      },
+      "source": [
+        "Changing the variables to include OpenCV and GPU in the Makefile"
+      ],
+      "id": "039a13c9-80d4-4743-9bba-093e17abeb34"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "be1d612e-d852-42a1-9696-6c40f05fe3cd"
+      },
+      "source": [
+        "!sed -i 's/OPENCV=0/OPENCV=1/g' Makefile\n",
+        "!sed -i 's/GPU=0/GPU=1/g' Makefile\n",
+        "#!sed -i 's/CUDNN=0/CUDNN=1/g' Makefile\n",
+        "%pycat Makefile"
+      ],
+      "id": "be1d612e-d852-42a1-9696-6c40f05fe3cd",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c2fa2267-6f78-4618-bdf6-3634e4c8eb7f"
+      },
+      "source": [
+        "!make"
+      ],
+      "id": "c2fa2267-6f78-4618-bdf6-3634e4c8eb7f",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4855dff0-481f-4fb0-a6bc-704baa99ba2f"
+      },
+      "source": [
+        "## Training"
+      ],
+      "id": "4855dff0-481f-4fb0-a6bc-704baa99ba2f"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4d7df690-857e-499f-bf7b-02331a41fcc9"
+      },
+      "source": [
+        "### Cutting weghts"
+      ],
+      "id": "4d7df690-857e-499f-bf7b-02331a41fcc9"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "30e91b47-49d3-43d1-b350-5de8d4c1c5a3"
+      },
+      "source": [
+        "!./darknet partial cfg/yolov4-tiny-3l-aa-leaky-real3l-v3.cfg backup/yolov4.weights backup/aayv4-3l-62.weights 62"
+      ],
+      "id": "30e91b47-49d3-43d1-b350-5de8d4c1c5a3",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8cea4ae3-968d-4198-8cce-169b0388d634"
+      },
+      "source": [
+        "### From the beginning"
+      ],
+      "id": "8cea4ae3-968d-4198-8cce-169b0388d634"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b96a2b9b-e418-4a09-b30c-d30bff059e5f"
+      },
+      "source": [
+        "!./darknet detector train -map -dont_show cfg/voc-bccd-aug.data cfg/yolov4-tiny-3l-aa-leaky-real3l-v3.cfg backup/aayv4-3l-62.weights >> ./training_tiny-3l-aa-leaky-real3l-v3-p1-1.log"
+      ],
+      "id": "b96a2b9b-e418-4a09-b30c-d30bff059e5f",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bee3d6b4-fb7d-4026-aaac-41b2d4fe9849"
+      },
+      "source": [
+        "### From backup"
+      ],
+      "id": "bee3d6b4-fb7d-4026-aaac-41b2d4fe9849"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2b9b4b21-edf3-48f2-bd5a-61aff89ce1b0"
+      },
+      "source": [
+        "./darknet detector train -map -dont_show cfg/voc-bccd-aug.data cfg/yolov4-tiny-3l-aa-leaky-real3l-v3-p7.cfg backup/yolov4-tiny-3l-aa-leaky-real3l-v3-p7_last.weights >> ./training_tiny-3l-aa-leaky-real3l-v3-p7.log"
+      ],
+      "id": "2b9b4b21-edf3-48f2-bd5a-61aff89ce1b0",
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
 }
