Utworzono za pomocą Colaboratory

--- a/Darknet-colab.ipynb
+++ b/Darknet-colab.ipynb
@@ -49,11 +49,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "64a86496-b809-41d4-913b-fd757c3a469e",
-        "outputId": "36e5562b-dc3a-49cf-dfb1-9c4244e15fb4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "64a86496-b809-41d4-913b-fd757c3a469e"
       },
       "source": [
         "!apt update\n",
@@ -64,74 +60,8 @@
         "!pip install watchdog"
       ],
       "id": "64a86496-b809-41d4-913b-fd757c3a469e",
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Hit:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease\n",
-            "Ign:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
-            "Ign:3 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
-            "Hit:4 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:5 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease\n",
-            "Hit:6 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "Get:7 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
-            "Hit:8 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "Get:10 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
-            "Hit:11 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
-            "Hit:13 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
-            "Get:14 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
-            "Hit:15 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
-            "Get:16 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [2,581 kB]\n",
-            "Get:17 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,183 kB]\n",
-            "Fetched 5,016 kB in 7s (723 kB/s)\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "5 packages can be upgraded. Run 'apt list --upgradable' to see them.\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "Calculating upgrade... Done\n",
-            "The following packages were automatically installed and are no longer required:\n",
-            "  libnvidia-common-460 linux-headers-4.15.0-142\n",
-            "  linux-headers-4.15.0-142-generic\n",
-            "Use 'apt autoremove' to remove them.\n",
-            "The following packages have been kept back:\n",
-            "  libcudnn8 libcudnn8-dev libnccl-dev libnccl2 libnvidia-common-465\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 5 not upgraded.\n",
-            "x86_64\n",
-            "DISTRIB_ID=Ubuntu\n",
-            "DISTRIB_RELEASE=18.04\n",
-            "DISTRIB_CODENAME=bionic\n",
-            "DISTRIB_DESCRIPTION=\"Ubuntu 18.04.5 LTS\"\n",
-            "NAME=\"Ubuntu\"\n",
-            "VERSION=\"18.04.5 LTS (Bionic Beaver)\"\n",
-            "ID=ubuntu\n",
-            "ID_LIKE=debian\n",
-            "PRETTY_NAME=\"Ubuntu 18.04.5 LTS\"\n",
-            "VERSION_ID=\"18.04\"\n",
-            "HOME_URL=\"https://www.ubuntu.com/\"\n",
-            "SUPPORT_URL=\"https://help.ubuntu.com/\"\n",
-            "BUG_REPORT_URL=\"https://bugs.launchpad.net/ubuntu/\"\n",
-            "PRIVACY_POLICY_URL=\"https://www.ubuntu.com/legal/terms-and-policies/privacy-policy\"\n",
-            "VERSION_CODENAME=bionic\n",
-            "UBUNTU_CODENAME=bionic\n",
-            "gcc (Ubuntu 7.5.0-3ubuntu1~18.04) 7.5.0\n",
-            "Copyright (C) 2017 Free Software Foundation, Inc.\n",
-            "This is free software; see the source for copying conditions.  There is NO\n",
-            "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n",
-            "\n",
-            "5.4.109+\n",
-            "Collecting watchdog\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/58/f6/6b538562aaa62294ca0a1d18b59d9fcb1a43fe166fa5b3a258f445d64119/watchdog-2.1.1-py3-none-manylinux2014_x86_64.whl (74kB)\n",
-            "\u001b[K     |████████████████████████████████| 81kB 3.9MB/s \n",
-            "\u001b[?25hInstalling collected packages: watchdog\n",
-            "Successfully installed watchdog-2.1.1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -175,7 +105,7 @@
         "id": "RZ75-jY2ymdk"
       },
       "source": [
-        "!python3 ./changesWatcher.py ./"
+        "!nohup bash ./watchdog_runer.sh"
       ],
       "id": "RZ75-jY2ymdk",
       "execution_count": null,
@@ -195,20 +125,20 @@
       "cell_type": "code",
       "metadata": {
         "id": "87b496aa-2639-4f41-8592-2e2a9107f753",
-        "outputId": "efd90054-9f8d-4dfc-f209-a88bbcd1a5af",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d4c26ec0-1f49-42a1-d50d-f23cd6c65efc"
       },
       "source": [
         "# Load the Drive helper and mount\n",
         "from google.colab import drive\n",
         "\n",
         "# This will prompt for authorization.\n",
-        "drive.mount('/BCCD')"
+        "drive.mount('/content/drive')"
       ],
       "id": "87b496aa-2639-4f41-8592-2e2a9107f753",
-      "execution_count": 8,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,14 +162,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8a5fdb92-48e2-4933-bc58-bbdefb66ca8e"
+        "id": "8a5fdb92-48e2-4933-bc58-bbdefb66ca8e",
+        "outputId": "72fcb131-d354-4dca-e4f2-9cf3b7a430e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!apt install libopencv-dev python-opencv ffmpeg"
       ],
       "id": "8a5fdb92-48e2-4933-bc58-bbdefb66ca8e",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "ffmpeg is already the newest version (7:3.4.8-0ubuntu0.2).\n",
+            "libopencv-dev is already the newest version (3.2.0+dfsg-4ubuntu0.1).\n",
+            "python-opencv is already the newest version (3.2.0+dfsg-4ubuntu0.1).\n",
+            "The following packages were automatically installed and are no longer required:\n",
+            "  libnvidia-common-460 linux-headers-4.15.0-142\n",
+            "  linux-headers-4.15.0-142-generic\n",
+            "Use 'apt autoremove' to remove them.\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 5 not upgraded.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -254,15 +206,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "be1d612e-d852-42a1-9696-6c40f05fe3cd"
+        "id": "Z8wUeypwNSod"
       },
       "source": [
-        "!sed -i 's/OPENCV=0/OPENCV=1/g' Makefile\n",
-        "!sed -i 's/GPU=0/GPU=1/g' Makefile\n",
-        "#!sed -i 's/CUDNN=0/CUDNN=1/g' Makefile\n",
-        "%pycat Makefile"
+        ""
       ],
-      "id": "be1d612e-d852-42a1-9696-6c40f05fe3cd",
+      "id": "Z8wUeypwNSod",
       "execution_count": null,
       "outputs": []
     },
@@ -275,6 +224,21 @@
         "!make"
       ],
       "id": "c2fa2267-6f78-4618-bdf6-3634e4c8eb7f",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rWhcCl6kLuvx"
+      },
+      "source": [
+        "!ls\n",
+        "!rm -r ./darknet-clb\n",
+        "#!mkdir /content/darknet-clb/backup\n",
+        "#!ln -s /content/drive/darknet-bck /content/darknet-clb/backup"
+      ],
+      "id": "rWhcCl6kLuvx",
       "execution_count": null,
       "outputs": []
     },
@@ -326,7 +290,7 @@
         "id": "b96a2b9b-e418-4a09-b30c-d30bff059e5f"
       },
       "source": [
-        "!./darknet detector train -map -dont_show cfg/voc-bccd-aug.data cfg/yolov4-tiny-3l-aa-leaky-real3l-v3.cfg backup/aayv4-3l-62.weights >> ./training_tiny-3l-aa-leaky-real3l-v3-p1-1.log"
+        "!./darknet detector train -map -dont_show cfg/voc-bccd-aug.data cfg/yolov4-tiny-3l-aa-leaky-real3l-v3.cfg backup/aayv4-3l-62.weights >> ./backup/training_tiny-3l-aa-leaky-real3l-v3-p1-1.log"
       ],
       "id": "b96a2b9b-e418-4a09-b30c-d30bff059e5f",
       "execution_count": null,
@@ -348,7 +312,7 @@
         "id": "2b9b4b21-edf3-48f2-bd5a-61aff89ce1b0"
       },
       "source": [
-        "./darknet detector train -map -dont_show cfg/voc-bccd-aug.data cfg/yolov4-tiny-3l-aa-leaky-real3l-v3-p7.cfg backup/yolov4-tiny-3l-aa-leaky-real3l-v3-p7_last.weights >> ./training_tiny-3l-aa-leaky-real3l-v3-p7.log"
+        "./darknet detector train -map -dont_show cfg/voc-bccd-aug.data cfg/yolov4-tiny-3l-aa-leaky-real3l-v3-p7.cfg backup/yolov4-tiny-3l-aa-leaky-real3l-v3-p7_last.weights >> ./backup/training_tiny-3l-aa-leaky-real3l-v3-p7.log"
       ],
       "id": "2b9b4b21-edf3-48f2-bd5a-61aff89ce1b0",
       "execution_count": null,
