Utworzono za pomocą Colaboratory

--- a/Darknet-colab.ipynb
+++ b/Darknet-colab.ipynb
@@ -23,8 +23,7 @@
       "name": "Darknet-colab.ipynb",
       "provenance": [],
       "toc_visible": true
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -138,7 +137,7 @@
         "drive.mount('/content/drive')"
       ],
       "id": "87b496aa-2639-4f41-8592-2e2a9107f753",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,7 +203,7 @@
         "!export PATH=/usr/local/cuda-11.1/bin:/usr/local/nvidia/bin:/usr/local/cuda/bin:/usr/local/cuda-11.1/bin:/$PATH"
       ],
       "id": "ND74daQjT26H",
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -216,7 +215,7 @@
         "!export PKG_CONFIG_PATH=/usr/lib/pkgconfig:/usr/lib/arm-linux-gnueabi/pkgconfig"
       ],
       "id": "2d604vC8xbcq",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -242,7 +241,7 @@
         "!ln -s  /usr/local/cuda-11.0 /usr/local/cuda-11.1"
       ],
       "id": "kKldevbaXqU4",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -281,7 +280,7 @@
         "!ln -s /content/drive/MyDrive/darknet-bck /content/darknet-clb/backup"
       ],
       "id": "rWhcCl6kLuvx",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -333,35 +332,24 @@
       },
       "source": [
         "%cp  /content/drive/MyDrive/darknet-bck/yolov4-sam-mish-aa_v2.cfg ./cfg/\n",
-        "%cp /content/drive/MyDrive/darknet-bck/yolov4-sam-mish.conv.105 ./cfg/"
+        "%cp /content/drive/MyDrive/darknet-bck/yolov4-sam-mish.conv.105 ./cfg/\n",
+        "%cp /content/drive/MyDrive/darknet-bck/yolov4-sam-mish-aa_v2_last.weights ./cfg/"
       ],
       "id": "pdEji1AoG06g",
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b96a2b9b-e418-4a09-b30c-d30bff059e5f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "89ec1e34-2d87-45a2-dbf8-80e3b95fd3a1"
+        "id": "b96a2b9b-e418-4a09-b30c-d30bff059e5f"
       },
       "source": [
         "!./darknet detector train -map -dont_show cfg/voc-bccd-aug-clb.data cfg/yolov4-sam-mish-aa_v2.cfg cfg/yolov4-sam-mish.conv.105 >> /content/drive/MyDrive/darknet-bck/training_yolov4-sam-mish-aa_v2.log"
       ],
       "id": "b96a2b9b-e418-4a09-b30c-d30bff059e5f",
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/bin/bash: ./darknet: No such file or directory\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -379,7 +367,7 @@
         "id": "2b9b4b21-edf3-48f2-bd5a-61aff89ce1b0"
       },
       "source": [
-        "./darknet detector train -map -dont_show cfg/voc-bccd-aug.data cfg/yolov4-tiny-3l-aa-leaky-real3l-v3-p7.cfg backup/yolov4-tiny-3l-aa-leaky-real3l-v3-p7_last.weights >> ./backup/training_tiny-3l-aa-leaky-real3l-v3-p7.log"
+        "!./darknet detector train -map -dont_show cfg/voc-bccd-aug-clb.data cfg/yolov4-sam-mish-aa_v2.cfg cfg/yolov4-sam-mish-aa_v2_last.weights >> /content/drive/MyDrive/darknet-bck/training_yolov4-sam-mish-aa_v2.log"
       ],
       "id": "2b9b4b21-edf3-48f2-bd5a-61aff89ce1b0",
       "execution_count": null,
