Utworzono za pomocą Colaboratory

--- a/Darknet-colab.ipynb
+++ b/Darknet-colab.ipynb
@@ -23,7 +23,8 @@
       "name": "Darknet-colab.ipynb",
       "provenance": [],
       "toc_visible": true
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -345,7 +346,7 @@
         "id": "b96a2b9b-e418-4a09-b30c-d30bff059e5f"
       },
       "source": [
-        "!./darknet detector train -map -dont_show cfg/voc-bccd-aug-clb.data cfg/yolov4-sam-mish-aa_v2.cfg cfg/yolov4-sam-mish.conv.105 >> /content/drive/MyDrive/darknet-bck/training_yolov4-sam-mish-aa_v2.log"
+        "!./darknet detector train -map -dont_show cfg/voc-bccd-aug-clb.data cfg/yolo4-tiny-mobilenet2-aug2.cfg >> /content/drive/MyDrive/darknet-bck/yolo4-tiny-mobilenet2-aug2.log"
       ],
       "id": "b96a2b9b-e418-4a09-b30c-d30bff059e5f",
       "execution_count": null,
